syntax = "proto3";

import "google/protobuf/empty.proto";

option java_package = "com.bowmeow.bowmeow_product";
option java_outer_classname = "ProductServiceProto";

service ProductService {
  rpc GetProductInfo (ProductRequest) returns (ProductInfo);
  rpc CreateOrder (ProductInfoForOrder) returns (CreateOrderResponse);
}

message ProductRequest {
  int32 product_sno = 1;
}

message ProductInfo {
  int32 product_sno = 1; // 상품 일련번호
  double product_price = 2; // 상품 가격
  string product_name = 3; // 상품명
  int32 product_purchase_count = 4;
}

message ProductInfoForOrder {
  int32 product_id = 1;               // 상품 아이디
  double product_price = 3;           // 상품 가격
  string product_name = 2;            // 상품명
  int32 product_purchase_count = 4;   // 구매수량
  string user_id = 5;                 // 유저 아이디
}

message CreateOrderResponse {
  string redirect_url = 1; // 리다이렉트 URL
  OrderProductResponse order = 2;
}

message OrderProductResponse {
  int32 order_id = 1;
  string user_id = 2;
  int32 product_id = 3;
  string product_name = 4;
  int32 product_purchase_count = 5;
  int32 product_price = 6;
  int32 product_amount = 7;
}